change contact info

--- a/about.html
+++ b/about.html
@@ -171,9 +171,9 @@
     <div id="text-14" class="widget edgtf-sidearea widget_text"> 
       <div class="textwidget">
         <p style="color: #000000;">
-          <a href="tel:65323678568"> (65)323-678-568 </a><br />
+          <a href="tel:65323678568"> (+62)813-8446-5126 </a><br />
           <a href="../cdn-cgi/l/email-protection.html#e794929797889593a782838082ca938f828a8294c984888a">
-            <span class="__cf_email__" data-cfemail="cea7a0a8a18ebea6a1baa1a9bcafbea6b7baa6aba3abe0ada1a3">[email&#160;protected]</span>
+            <span class="__cf_email__" data-cfemail="cea7a0a8a18ebea6a1baa1a9bcafbea6b7baa6aba3abe0ada1a3">info@lodagenci.co.id</span>
           </a>
         </p>
       </div>
@@ -1008,7 +1008,7 @@
                   <div class="textwidget">
                     <p>Email: 
                       <a href="../cdn-cgi/l/email-protection.html#caa5a8a0afa1bea3bc8abba5aeafa3a4beafb8aba9bea3bcafe4a9a5a7" target="_top" rel="noopener">
-                        <span class="__cf_email__" data-cfemail="026d60686769766b7442736d66676b6c7667706361766b74672c616d6f">[email&#160;protected]</span>
+                        <span class="__cf_email__" data-cfemail="026d60686769766b7442736d66676b6c7667706361766b74672c616d6f">info@lodagenci.co.id</span>
                       </a><br />
                       <a href="tel:+123456789"> phone: +123 456 789</a>
                     </p>
