--- a/blog.html
+++ b/blog.html
@@ -180,9 +180,9 @@
     </div><div id="text-14" class="widget edgtf-sidearea widget_text">
       <div class="textwidget">
         <p style="color: #000000;">
-          <a href="tel:65323678568"> (65)323-678-568 </a>
+          <a href="tel:65323678568"> (+62)813-8446-5126 </a>
           <br /><a href="cdn-cgi/l/email-protection.html#bbc8cecbcbd4c9cffbdedfdcde96cfd3ded6dec895d8d4d6">
-            <span class="__cf_email__" data-cfemail="b7ded9d1d8f7c7dfd8c3d8d0c5d6c7dfcec3dfd2dad299d4d8da">[email&#160;protected]</span>
+            <span class="__cf_email__" data-cfemail="b7ded9d1d8f7c7dfd8c3d8d0c5d6c7dfcec3dfd2dad299d4d8da">info@lodagenci.co.id</span>
           </a>
         </p>
       </div>
@@ -1627,7 +1627,7 @@
                   <div class="textwidget">
                     <p>Email: 
                       <a href="cdn-cgi/l/email-protection.html#046b666e616f706d7244756b60616d6a7061766567706d72612a676b69" target="_top" rel="noopener">
-                        <span class="__cf_email__" data-cfemail="432c21292628372a3503322c27262a2d3726312220372a35266d202c2e">[email&#160;protected]</span>
+                        <span class="__cf_email__" data-cfemail="432c21292628372a3503322c27262a2d3726312220372a35266d202c2e">info@lodagenci.co.id</span>
                         
                       </a>
                       <br />
