--- a/index.html
+++ b/index.html
@@ -163,8 +163,9 @@
     <div id="text-13" class="widget edgtf-sidearea widget_text"> 
       <div class="textwidget">
         <p style="color: #000000;"> 
-          <a href="https://www.google.com/maps/search/732%2F21+Second+Street,+Manchester,+King+Street,+Kingston+United+Kingdom/@53.472225,-2.2935019,12z/data=!3m1!4b1" target="_blank" rel="noopener">732/21 Second Street, Manchester,<br />
-            King Street, Kingston United Kingdom
+          <a href="https://www.google.com/maps/search/732%2F21+Second+Street,+Manchester,+King+Street,+Kingston+United+Kingdom/@53.472225,-2.2935019,12z/data=!3m1!4b1" target="_blank" rel="noopener">
+            Wisma Semeru, 3rd Floor,<br />
+            Jl. Taman Kemang #18 Jakarta – Indonesia
           </a>
         </p>
       </div>
@@ -172,9 +173,9 @@
     <div id="text-14" class="widget edgtf-sidearea widget_text"> 
       <div class="textwidget">
         <p style="color: #000000;">
-          <a href="tel:65323678568"> (65)323-678-568 </a><br />
+          <a href="tel:65323678568"> (+62)813-8446-5126 </a><br />
           <a href="cdn-cgi/l/email-protection.html#64171114140b1610240100030149100c010901174a070b09">
-            <span class="__cf_email__" data-cfemail="f49d9a929bb4849c9b809b938695849c8d809c919991da979b99">[email&#160;protected]</span>
+            <span class="__cf_email__" data-cfemail="f49d9a929bb4849c9b809b938695849c8d809c919991da979b99">info@lodagenci.co.id</span>
           </a>
         </p>
       </div>
