--- a/portofolio.html
+++ b/portofolio.html
@@ -170,8 +170,8 @@
     </div>
     <div id="text-14" class="widget edgtf-sidearea widget_text"> 
       <div class="textwidget">
-        <p style="color: #000000;"><a href="tel:65323678568"> (65)323-678-568 </a><br />
-          <a href="cdn-cgi/l/email-protection.html#077472777768757347626360622a736f626a62742964686a"><span class="__cf_email__" data-cfemail="1c75727a735c6c747368737b6e7d6c74656874797179327f7371">[email&#160;protected]</span>
+        <p style="color: #000000;"><a href="tel:65323678568"> (+62)813-8446-5126 </a><br />
+          <a href="cdn-cgi/l/email-protection.html#077472777768757347626360622a736f626a62742964686a"><span class="__cf_email__" data-cfemail="1c75727a735c6c747368737b6e7d6c74656874797179327f7371">info@lodagenci.co.id</span>
           </a>
         </p>
       </div>
@@ -1133,7 +1133,7 @@
               <div class="edgtf-column-content edgtf-grid-col-4">
                 <div id="text-3" class="widget edgtf-footer-column-1 widget_text"> 
                   <div class="textwidget">
-                    <p>Email: <a href="cdn-cgi/l/email-protection.html#4b2429212e203f223d0b3a242f2e22253f2e392a283f223d2e65282426" target="_top" rel="noopener"><span class="__cf_email__" data-cfemail="9af5f8f0fff1eef3ecdaebf5fefff3f4eeffe8fbf9eef3ecffb4f9f5f7">[email&#160;protected]</span></a><br />
+                    <p>Email: <a href="cdn-cgi/l/email-protection.html#4b2429212e203f223d0b3a242f2e22253f2e392a283f223d2e65282426" target="_top" rel="noopener"><span class="__cf_email__" data-cfemail="9af5f8f0fff1eef3ecdaebf5fefff3f4eeffe8fbf9eef3ecffb4f9f5f7">info@lodagenci.co.id</span></a><br />
                       <a href="tel:+123456789"> phone: +123 456 789
                         
                       </a>
