--- a/index.html
+++ b/index.html
@@ -611,17 +611,17 @@
                       </span>
                       <ul class="sub_menu">
                         <li id="mobile-menu-item-1379" class="menu-item menu-item-type-post_type menu-item-object-portfolio-item ">
-                          <a href="portfolio-item/kimono/index.html" class="">
+                          <a href="portofolio.html" class="">
                             <span>Standard</span>
                           </a>
                         </li>
                         <li id="mobile-menu-item-1378" class="menu-item menu-item-type-post_type menu-item-object-portfolio-item ">
-                          <a href="portfolio-item/dreaming/index.html" class="">
+                          <a href="portofolio.html" class="">
                             <span>Simple</span>
                           </a>
                         </li>
                         <li id="mobile-menu-item-1377" class="menu-item menu-item-type-post_type menu-item-object-portfolio-item ">
-                          <a href="portfolio-item/big-air/index.html" class="">
+                          <a href="portofolio.html" class="">
                             <span>Custom</span>
                           </a>
                         </li>
@@ -788,7 +788,7 @@
                                         </div>
                                       </div>
                                     </div>
-                                    <a itemprop="url" class="edgtf-pli-link edgtf-block-drag-link" href="portfolio-item/photo-shoot/index.html" target="_self"></a>
+                                    <a itemprop="url" class="edgtf-pli-link edgtf-block-drag-link" href="portofolio.html" target="_self"></a>
                                   </div>
                                 </article>
                                 <article class="edgtf-pl-item  post-281 portfolio-item type-portfolio-item status-publish has-post-thumbnail hentry portfolio-category-exhibition">
@@ -806,7 +806,7 @@
                                         </div>
                                       </div>
                                     </div>
-                                    <a itemprop="url" class="edgtf-pli-link edgtf-block-drag-link" href="portfolio-item/photo-inspiration/index.html" target="_self"></a>
+                                    <a itemprop="url" class="edgtf-pli-link edgtf-block-drag-link" href="portofolio.html" target="_self"></a>
                                   </div>
                                 </article>
                                 <article class="edgtf-pl-item  post-277 portfolio-item type-portfolio-item status-publish has-post-thumbnail hentry portfolio-category-print">
@@ -824,7 +824,7 @@
                                         </div>
                                       </div>
                                     </div>
-                                    <a itemprop="url" class="edgtf-pli-link edgtf-block-drag-link" href="portfolio-item/friday-favorites/index.html" target="_self"></a>
+                                    <a itemprop="url" class="edgtf-pli-link edgtf-block-drag-link" href="portofolio.html" target="_self"></a>
                                   </div>
                                 </article>
                                 <article class="edgtf-pl-item  post-274 portfolio-item type-portfolio-item status-publish has-post-thumbnail hentry portfolio-category-exhibition">
@@ -842,7 +842,7 @@
                                         </div>
                                       </div>
                                     </div>
-                                    <a itemprop="url" class="edgtf-pli-link edgtf-block-drag-link" href="portfolio-item/solitary-moments/index.html" target="_self"></a>
+                                    <a itemprop="url" class="edgtf-pli-link edgtf-block-drag-link" href="portofolio.html" target="_self"></a>
                                   </div>
                                 </article>
                                 <article class="edgtf-pl-item  post-266 portfolio-item type-portfolio-item status-publish has-post-thumbnail hentry portfolio-category-print">
@@ -860,7 +860,7 @@
                                         </div>
                                       </div>
                                     </div>
-                                    <a itemprop="url" class="edgtf-pli-link edgtf-block-drag-link" href="portfolio-item/beautiful-life/index.html" target="_self"></a>
+                                    <a itemprop="url" class="edgtf-pli-link edgtf-block-drag-link" href="portofolio.html" target="_self"></a>
                                   </div>
                                 </article>
                                 <article class="edgtf-pl-item  post-262 portfolio-item type-portfolio-item status-publish has-post-thumbnail hentry portfolio-category-photography">
@@ -878,7 +878,7 @@
                                         </div>
                                       </div>
                                     </div>
-                                    <a itemprop="url" class="edgtf-pli-link edgtf-block-drag-link" href="portfolio-item/seek-adventure/index.html" target="_self"></a>
+                                    <a itemprop="url" class="edgtf-pli-link edgtf-block-drag-link" href="portofolio.html" target="_self"></a>
                                   </div>
                                 </article>
                                 <article class="edgtf-pl-item  post-259 portfolio-item type-portfolio-item status-publish has-post-thumbnail hentry portfolio-category-exhibition">
@@ -896,7 +896,7 @@
                                         </div>
                                       </div>
                                     </div>
-                                    <a itemprop="url" class="edgtf-pli-link edgtf-block-drag-link" href="portfolio-item/summer-breeze/index.html" target="_self"></a>
+                                    <a itemprop="url" class="edgtf-pli-link edgtf-block-drag-link" href="portofolio.html" target="_self"></a>
                                   </div>
                                 </article>
                                 <article class="edgtf-pl-item  post-255 portfolio-item type-portfolio-item status-publish has-post-thumbnail hentry portfolio-category-photography">
@@ -914,7 +914,7 @@
                                         </div>
                                       </div>
                                     </div>
-                                    <a itemprop="url" class="edgtf-pli-link edgtf-block-drag-link" href="portfolio-item/art-journal/index.html" target="_self"></a>
+                                    <a itemprop="url" class="edgtf-pli-link edgtf-block-drag-link" href="portofolio.html" target="_self"></a>
                                   </div>
                                 </article>
                                 <article class="edgtf-pl-item  post-249 portfolio-item type-portfolio-item status-publish has-post-thumbnail hentry portfolio-category-print">
@@ -932,7 +932,7 @@
                                         </div>
                                       </div>
                                     </div>
-                                    <a itemprop="url" class="edgtf-pli-link edgtf-block-drag-link" href="portfolio-item/new-chances/index.html" target="_self"></a>
+                                    <a itemprop="url" class="edgtf-pli-link edgtf-block-drag-link" href="portofolio.html" target="_self"></a>
                                   </div>
                                 </article>
                                 <article class="edgtf-pl-item  post-245 portfolio-item type-portfolio-item status-publish has-post-thumbnail hentry portfolio-category-exhibition">
@@ -950,7 +950,7 @@
                                         </div>
                                       </div>
                                     </div>
-                                    <a itemprop="url" class="edgtf-pli-link edgtf-block-drag-link" href="portfolio-item/collaborations/index.html" target="_self"></a>
+                                    <a itemprop="url" class="edgtf-pli-link edgtf-block-drag-link" href="portofolio.html" target="_self"></a>
                                   </div>
                                 </article>
                                 <article class="edgtf-pl-item  post-242 portfolio-item type-portfolio-item status-publish has-post-thumbnail hentry portfolio-category-exhibition">
@@ -968,7 +968,7 @@
                                         </div>
                                       </div>
                                     </div>
-                                    <a itemprop="url" class="edgtf-pli-link edgtf-block-drag-link" href="portfolio-item/digital-collage/index.html" target="_self"></a>
+                                    <a itemprop="url" class="edgtf-pli-link edgtf-block-drag-link" href="portofolio.html" target="_self"></a>
                                   </div>
                                 </article>
                                 <article class="edgtf-pl-item  post-239 portfolio-item type-portfolio-item status-publish has-post-thumbnail hentry portfolio-category-print">
@@ -986,7 +986,7 @@
                                         </div>
                                       </div>
                                     </div>
-                                    <a itemprop="url" class="edgtf-pli-link edgtf-block-drag-link" href="portfolio-item/simple-ideas/index.html" target="_self"></a>
+                                    <a itemprop="url" class="edgtf-pli-link edgtf-block-drag-link" href="portofolio.html" target="_self"></a>
                                   </div>
                                 </article>
                                 <article class="edgtf-pl-item  post-235 portfolio-item type-portfolio-item status-publish has-post-thumbnail hentry portfolio-category-photography">
@@ -1004,7 +1004,7 @@
                                         </div>
                                       </div>
                                     </div>
-                                    <a itemprop="url" class="edgtf-pli-link edgtf-block-drag-link" href="portfolio-item/creative-mind/index.html" target="_self"></a>
+                                    <a itemprop="url" class="edgtf-pli-link edgtf-block-drag-link" href="portofolio.html" target="_self"></a>
                                   </div>
                                 </article>
                                 <article class="edgtf-pl-item  post-218 portfolio-item type-portfolio-item status-publish has-post-thumbnail hentry portfolio-category-print">
@@ -1022,7 +1022,7 @@
                                         </div>
                                       </div>
                                     </div>
-                                    <a itemprop="url" class="edgtf-pli-link edgtf-block-drag-link" href="portfolio-item/fashion/index.html" target="_self"></a>
+                                    <a itemprop="url" class="edgtf-pli-link edgtf-block-drag-link" href="portofolio.html" target="_self"></a>
                                   </div>
                                 </article>
                                 <article class="edgtf-pl-item  post-215 portfolio-item type-portfolio-item status-publish has-post-thumbnail hentry portfolio-category-exhibition">
@@ -1040,7 +1040,7 @@
                                         </div>
                                       </div>
                                     </div>
-                                    <a itemprop="url" class="edgtf-pli-link edgtf-block-drag-link" href="portfolio-item/winter-joy/index.html" target="_self"></a>
+                                    <a itemprop="url" class="edgtf-pli-link edgtf-block-drag-link" href="portofolio.html" target="_self"></a>
                                   </div>
                                 </article>
                                 <article class="edgtf-pl-item  post-212 portfolio-item type-portfolio-item status-publish has-post-thumbnail hentry portfolio-category-photography">
@@ -1058,7 +1058,7 @@
                                         </div>
                                       </div>
                                     </div>
-                                    <a itemprop="url" class="edgtf-pli-link edgtf-block-drag-link" href="portfolio-item/home-style/index.html" target="_self"></a>
+                                    <a itemprop="url" class="edgtf-pli-link edgtf-block-drag-link" href="portofolio.html" target="_self"></a>
                                   </div>
                                 </article>
                               </div>
