adding icon and change title

--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=yes">
-  <title>Metro Gallery &#8211; Objektiv</title>
+  <link rel="icon" type="image/jpg" href="icon.jpeg" />
+  <title>Blog - Hira </title>
   <style type="text/css">
     img.wp-smiley,
     img.emoji {
