--- a/index.html
+++ b/index.html
@@ -259,9 +259,9 @@
               <div class="edgtf-position-left-inner">
                 <div class="edgtf-logo-wrapper">
                   <a itemprop="url" href="index.html" style="height: 26px;">
-                    <img itemprop="image" class="edgtf-normal-logo" src="logo.jpeg"   alt="logo" />
-                    <img itemprop="image" class="edgtf-dark-logo" src="logo.jpeg"   alt="dark logo" /> 
-                    <img itemprop="image" class="edgtf-light-logo" src="logo.jpeg"   alt="light logo" /> 
+                    <img itemprop="image" class="edgtf-normal-logo" src="logo_white.png"   alt="logo" />
+                    <img itemprop="image" class="edgtf-dark-logo" src="logo_white.png"   alt="dark logo" /> 
+                    <img itemprop="image" class="edgtf-light-logo" src="logo_white.png"   alt="light logo" /> 
                   </a>
                 </div>
               </div>
@@ -354,7 +354,7 @@
                     <div class="edgtf-position-center-inner">
                       <div class="edgtf-mobile-logo-wrapper">
                         <a itemprop="url" href="index.html" style="height: 26px">
-                          <img itemprop="image" src="logo.jpeg"   alt="Mobile Logo" />
+                          <img itemprop="image" src="logo_white.png"   alt="Mobile Logo" />
                         </a>
                       </div>
                     </div>
