change logo and favicon

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=yes">
-  <link rel="icon" type="image/jpg" href="icon.jpeg" />
+  <link rel="icon" type="image/png" href="favicon.png" />
   <title>Contact - Hira </title>
   <style type="text/css">
     img.wp-smiley,
@@ -227,9 +227,9 @@
               <div class="edgtf-position-left-inner">
                 <div class="edgtf-logo-wrapper">
                   <a itemprop="url" href="index.html" style="height: 26px;">
-                    <img itemprop="image" class="edgtf-normal-logo" src="logo.jpeg" width="278" height="52" alt="logo" />
-                    <img itemprop="image" class="edgtf-dark-logo" src="logo.jpeg" width="278" height="52" alt="dark logo" /> 
-                    <img itemprop="image" class="edgtf-light-logo" src="logo.jpeg" width="278" height="52" alt="light logo" /> 
+                    <img itemprop="image" class="edgtf-normal-logo" src="logo_white.png"   alt="logo" />
+                    <img itemprop="image" class="edgtf-dark-logo" src="logo_white.png"   alt="dark logo" /> 
+                    <img itemprop="image" class="edgtf-light-logo" src="logo_white.png"   alt="light logo" /> 
                   </a>
                 </div>
               </div>
