--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=yes">
-  <link rel="icon" type="image/jpg" href="icon.jpeg" />
+  <link rel="icon" type="image/png" href="favicon.png" />
   <title>Home - Hira </title>
   <style type="text/css">
     img.wp-smiley,
